# futures-rs

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .rustfmt.toml  .travis.yml  2018-08-06-toykio.md  BAD_ERRORS  CHANGELOG.md  Cargo.toml  DECISIONS  FAQ.md  NOTES  README.md  TODO.md  TUTORIAL.md  _config.yml  appveyor.yml  build.rs  cargo.sh  futures-await.md  imprint.md  no_atomic_cas.rs  triagebot.toml
ferry/: Cargo.toml
ferry/src/: lib.rs
futures/: .Cargo.toml.swp  Cargo.toml  build.rs  yanked-redirect.html
futures-async-macro/: Cargo.toml  README.md
futures-async-macro/src/: elision.rs  error.rs  lib.rs
futures-async-runtime/: Cargo.toml
futures-async-runtime/old-examples/: echo.rs
futures-async-runtime/src/: future.rs  lib.rs  old-lib.rs  pinned_future.rs  pinned_stream.rs  stream.rs
futures-await-async-macro/: Cargo.toml
futures-await-async-macro/src/: elision.rs  lib.rs
futures-channel/: Cargo.toml  README.md
futures-channel/benches/: sync_mpsc.rs
futures-channel/src/: lib.rs  lock.rs  manual_reset_event.rs  oneshot.rs
futures-channel/tests/: channel.rs  manual_reset_event.rs  mpsc-close.rs  mpsc-size_hint.rs  mpsc.rs  oneshot.rs
futures-channel/tests_disabled/: mpsc-close.rs
futures-core/: Cargo.toml  README.md  build.rs  no_atomic_cas.rs
futures-core/src/: executor.rs  future.rs  impls.rs  impls_nightly.rs  io.rs  iteration.rs  lib.rs  never.rs  poll.rs  stream.rs  stream_obj.rs  task.rs
futures-cpupool/: Cargo.toml  README.md
futures-cpupool/src/: lib.rs  pool.rs
futures-cpupool/tests/: smoke.rs
futures-curl/: Cargo.toml  README.md
futures-curl/examples/: two.rs
futures-curl/src/: lib.rs  unix.rs  windows.rs
futures-curl/tests/: smoke.rs
futures-dns/: Cargo.toml
futures-dns/src/: connector.rs  lib.rs  select_all_ok.rs
futures-executor/: Cargo.toml  README.md
futures-executor/benches/: poll.rs  thread_notify.rs
futures-executor/src/: blocking.rs  current_thread.rs  custom_local_pool.rs  enter.rs  lib.rs  local_pool.rs  park.rs  park_thread.rs  spawn.rs  task_runner.rs  thread.rs  thread_pool.rs  unpark_mutex.rs
futures-executor/tests/: block_on.rs  current_thread.rs  custom_local_pool.rs  local_pool.rs
futures-intrusive/: Cargo.toml  LICENSE-MIT
futures-intrusive/src/: intrusive_list.rs  lib.rs
futures-intrusive/tests/: manual_reset_event.rs  mutex.rs  oneshot_channel.rs
futures-io/: Cargo.toml  README.md
futures-io/src/: buf_reader.rs  buf_writer.rs  chain.rs  copy.rs  empty.rs  flush.rs  impls.rs  lib.rs  read_exact.rs  read_to_end.rs  ready_tracker.rs  repeat.rs  sink.rs  take.rs  task.rs  window.rs  write_all.rs
futures-io/tests/: async_read.rs  codecs.rs  cursor.rs  framed.rs  framed_read.rs  framed_write.rs  length_delimited.rs
futures-join-macro/: Cargo.toml
futures-join-macro/src/: lib.rs
futures-macro/: Cargo.toml
futures-macro-async/: Cargo.toml
futures-macro-async/src/: attribute.rs  elision.rs  lib.rs
futures-macro-await/: Cargo.toml
futures-macro-await/src/: lib.rs
futures-macro/src/: executor.rs  join.rs  lib.rs  select.rs  stream_select.rs
futures-minihttp/: Cargo.toml  README.md  pipelined_get.lua
futures-minihttp/src/: date.rs  io2.rs  lib.rs  response.rs
futures-minihttp/techempower1/: Cargo.toml  README.md
futures-minihttp/techempower2/: Cargo.toml  README.md
futures-minihttp/tls-example/: Cargo.toml  README.md
futures-select-macro/: Cargo.toml
futures-select-macro/src/: lib.rs
futures-sink/: Cargo.toml  README.md
futures-sink/src/: channel_impls.rs  lib.rs
futures-socks5/: Cargo.toml  README.md
futures-socks5/src/: main.rs
futures-socks5/tests/: smoke.rs
futures-stable/: Cargo.toml
futures-stable/src/: executor.rs  lib.rs  unsafe_pin.rs
futures-task/: Cargo.toml  README.md  build.rs
futures-task/src/: arc_wake.rs  future_obj.rs  lib.rs  noop_waker.rs  spawn.rs  waker.rs  waker_ref.rs
futures-test/: Cargo.toml  README.md
futures-test/src/: assert.rs  assert_unmoved.rs  interleave_pending.rs  lib.rs  track_closed.rs
futures-tls/: Cargo.toml  README.md
futures-tls/src/: lib.rs  openssl.rs  schannel.rs  secure_transport.rs
futures-tls/tests/: bad.rs  google.rs  server.crt  server.der  smoke.rs
futures-uds/: Cargo.toml  README.md
futures-uds/src/: lib.rs
futures-util/: Cargo.toml  README.md  bilock.rs  build.rs
futures-util/benches/: bilock.rs  flatten_unordered.rs  futures_unordered.rs  select.rs
futures-util/benches_disabled/: bilock.rs
futures-util/src/: abortable.rs  fns.rs  lib.rs  lock.rs  macros.rs  pin_mut.rs  random.rs  unfold_state.rs  wakerset.rs  yield_after.rs
futures-util/tests/: atomic_waker.rs  foo.rs  futures_unordered.rs  mutex.rs  next_some.rs  select_all.rs  select_next_some.rs
futures/examples/: functional.rs  imperative.rs
futures/src/: lib.rs
futures/testcrate/: Cargo.toml
futures/tests/: abortable.rs  all.rs  arc_wake.rs  async_await_macros.rs  async_await_tests.rs  async_stream_tests.rs  atomic_waker.rs  auto_traits.rs  basic_combinators.rs  bilock.rs  buffer_unordered.rs  compat.rs  compat_miri.rs  eager_drop.rs  eventual.rs  fuse.rs  future_abortable.rs  future_basic_combinators.rs  future_flatten_stream.rs  future_fuse.rs  future_inspect.rs  future_join.rs  future_join_all.rs  future_obj.rs  future_select.rs  future_select_all.rs  future_select_ok.rs  future_shared.rs  future_try_flatten_stream.rs  future_try_join_all.rs  future_try_select.rs  futures_ordered.rs  futures_unordered.rs  inspect.rs  io_buf_reader.rs  io_buf_writer.rs  io_bytes.rs  io_cursor.rs  io_deref_pin_mut.rs  io_line_writer.rs  (+52 more)
futures/tests_disabled/: all.rs  async_await_tests.rs  bilock.rs  buffer_unordered.rs  eager_drop.rs  eventual.rs  fuse.rs  future_flatten_stream.rs  futures_unordered.rs  ready_queue.rs  select_all.rs  select_ok.rs  shared.rs  sink.rs  stream.rs  stream_catch_unwind.rs  stream_select_all.rs
futures01/: Cargo.toml
futures01/src/: lib.rs
http/: Cargo.toml
http/src/: atomic.rs  date.rs  io2.rs  lib.rs  main.rs  request.rs  response.rs
http/ssl-example/: Cargo.toml
(+4565 files in other folders)
