[package]
name = "ferry"
version = "0.1.0"
authors = ["Aaron Turon <aturon@mozilla.com>"]

[dependencies]
env_logger = "0.3"
futures = { path = ".." }
futures-io = { path = "../futures-io" }
futures-mio = { path = "../futures-mio" }
httparse = "1.1"
log = "0.3"
net2 = "0.2"
time = "0.1"

[profile.release]
debug = true
