[package]
name = "futures-async-macro"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]

[lib]
proc-macro = true

[dependencies]
quote = { git = 'https://github.com/dtolnay/quote' }
proc-macro2 = { version = "0.1", features = ["unstable"] }

[dependencies.syn]
git = 'https://github.com/dtolnay/syn'
features = ["full", "fold", "parsing", "printing"]
default-features = false

[dependencies.synom]
git = 'https://github.com/dtolnay/syn'
default-features = false
