[package]
name = "futures-async-macro"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]

[lib]
proc-macro = true

[dependencies]
futures-await-quote = "0.4"
proc-macro2 = { version = "0.1", features = ["unstable"] }

[dependencies.futures-await-syn]
version = "0.12"
features = ["full", "fold", "parsing", "printing"]
default-features = false

[dependencies.futures-await-synom]
version = "0.12"
default-features = false
