[package]
name = "futures-async-runtime-preview"
version = "0.2.3"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "../README.md"
keywords = ["async"]
categories = ["asynchronous", "rust-patterns"]
repository = "https://github.com/rust-lang-nursery/futures-rs"
homepage = "https://github.com/rust-lang-nursery/futures-rs"
documentation = "https://docs.rs/futures-rs"
description = """
Runtime for the async/await macros in the `futures` crate.
"""

[lib]
name = "futures_async_runtime"

[dependencies.futures-core-preview]
version = "0.2.2"
path = "../futures-core"
default-features = false

[dependencies.futures-stable-preview]
version = "0.2.2"
path = "../futures-stable"
default-features = false

[features]
nightly = ["futures-core-preview/nightly", "futures-stable-preview/nightly"]
std = ["futures-core-preview/std", "futures-stable-preview/std"]
default = ["std"]
