[package]
name = "futures-await-async-macro"
version = "0.1.1"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/alexcrichton/futures-await"
description = """
Definition of the `#[async]` macro for the `futures-await` crate as well as a
few other assorted macros.
"""

[lib]
proc-macro = true

[dependencies]
futures-await-quote = "0.4"
proc-macro2 = { version = "0.1", features = ["unstable"] }

[dependencies.futures-await-syn]
version = "0.12"
features = ["full", "fold", "parsing", "printing"]
default-features = false

[dependencies.futures-await-synom]
version = "0.12"
default-features = false
