[package]
name = "futures-await-async-macro"
version = "0.1.1"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/alexcrichton/futures-await"
description = """
Definition of the `#[async]` macro for the `futures-await` crate as well as a
few other assorted macros.
"""

[lib]
proc-macro = true

[dependencies]
quote = "0.4"
proc-macro2 = { version = "0.2", features = ["nightly"] }

[dependencies.syn]
version = "0.12"
features = ["full", "fold", "parsing", "printing"]
default-features = false
