[package]
name = "futures-channel"
version = "0.3.32"
edition = "2018"
# NB: Sync with "Usage" section in README.md and util-msrv job in .github/workflows/ci.yml
rust-version = "1.71"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/futures-rs"
homepage = "https://rust-lang.github.io/futures-rs"
description = """
Channels for asynchronous communication using futures-rs.
"""

[features]
default = ["std"]
std = ["alloc", "futures-core/std"]
alloc = ["futures-core/alloc"]
sink = ["futures-sink"]

# These features are no longer used.
# TODO: remove in the next major version.
unstable = []
cfg-target-has-atomic = []

[dependencies]
futures-core = { path = "../futures-core", version = "0.3.32", default-features = false }
futures-sink = { path = "../futures-sink", version = "0.3.32", default-features = false, optional = true }

[dev-dependencies]
futures = { path = "../futures", default-features = true }
futures-test = { path = "../futures-test", default-features = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
