[package]
name = "futures-cpupool"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/alexcrichton/futures-rs"
homepage = "https://github.com/alexcrichton/futures-rs"
documentation = "http://alexcrichton.com/futures-rs/futures_cpupool/"
description = """
An implementation of thread pools which hand out futures to the results of the
computation on the threads themselves.
"""

[dependencies]
futures = { path = "..", version = "0.1" }
crossbeam = "0.2"
