[package]
name = "futures-dns"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]

[dependencies]
futures = { path = "..", version = "0.1" }
futures-cpupool = { path = "../futures-cpupool", version = "0.1" }
futures-io = { path = "../futures-io", version = "0.1" }
futures-mio = { path = "../futures-mio", version = "0.1" }
log = "0.3"
