[package]
name = "futures-intrusive-preview"
edition = "2018"
version = "0.3.0-alpha.11"
authors = ["Matthias Einwag <matthias.einwag@live.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang-nursery/futures-rs"
homepage = "https://rust-lang-nursery.github.io/futures-rs"
documentation = "https://rust-lang-nursery.github.io/futures-api-docs/0.3.0-alpha.11/futures_intrusive"
description = """
Futures based on intrusive data structures.
"""

[lib]
name = "futures_intrusive"

[features]
std = ["futures-core-preview/std"]
default = ["std"]

[dependencies]
futures-core-preview = { path = "../futures-core", version = "0.3.0-alpha.11", default-features = false }

[dev-dependencies]
futures-preview = { path = "../futures", version = "0.3.0-alpha.11", default-features = true }
futures-test-preview = { path = "../futures-test", version = "0.3.0-alpha.11", default-features = true }
pin-utils = "0.1.0-alpha.3"
