[package]
name = "futures-macro-async"
version = "0.2.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-lang-nursery/futures-rs"
description = """
Definition of the `#[async]` macro for the `futures-rs` crate as well as a
few other assorted macros.
"""

[lib]
proc-macro = true

[dependencies]
quote = "0.5"
proc-macro2 = "0.3"

[dependencies.syn]
version = "0.13"
features = ["full", "fold", "parsing", "printing", "extra-traits", "proc-macro"]
default-features = false

[features]
nightly = ["proc-macro2/nightly"]
