[package]
name = "futures-macro-async-preview"
version = "0.2.2"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-lang-nursery/futures-rs"
description = """
Definition of the `#[async]` macro for the `futures-rs` crate as well as a
few other assorted macros.
"""

[lib]
name = "futures_macro_async"
proc-macro = true

[dependencies]
quote = "0.6"
proc-macro2 = "0.4.4"

[dependencies.syn]
version = "0.14"
features = ["full", "fold", "parsing", "printing", "extra-traits", "proc-macro"]
default-features = false

[features]
nightly = ["proc-macro2/nightly"]
