[package]
name = "futures-macro-await-preview"
version = "0.2.2"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-lang-nursery/futures-rs"
description = """
Definition of the `await!` macro for the `futures` crate.
"""

[lib]
name = "futures_macro_await"

[dev-dependencies]
futures-preview = { path = "../futures" }

[features]
nightly = ["futures-preview/nightly"]
