[package]
name = "futures-macro"
version = "0.3.27"
edition = "2018"
rust-version = "1.45"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/futures-rs"
homepage = "https://rust-lang.github.io/futures-rs"
description = """
The futures-rs procedural macro implementations.
"""

[lib]
proc-macro = true

[features]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0.56", features = ["full"] }
