[package]
name = "futures-select-macro-preview"
edition = "2018"
version = "0.3.0-alpha.18"
authors = ["Taylor Cramer <cramertj@google.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang-nursery/futures-rs"
homepage = "https://rust-lang-nursery.github.io/futures-rs"
documentation = "https://rust-lang-nursery.github.io/futures-api-docs/0.3.0-alpha.18/futures_select_macro"
description = """
The `select!` macro for waiting on multiple different `Future`s at once and handling the first one to complete.
"""

[lib]
name = "futures_select_macro"
proc-macro = true

[features]
std = []

[dependencies]
proc-macro2 = "1.0"
proc-macro-hack = "0.5.3"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
