[package]
name = "futures-sink"
edition = "2018"
version = "0.3.1"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang-nursery/futures-rs"
homepage = "https://rust-lang-nursery.github.io/futures-rs"
documentation = "https://docs.rs/futures-sink/0.3.0"
description = """
The asynchronous `Sink` trait for the futures-rs library.
"""

[lib]
name = "futures_sink"

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[dependencies]
