[package]
name = "futures-sink"
edition = "2018"
version = "0.3.13"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/futures-rs"
homepage = "https://rust-lang.github.io/futures-rs"
documentation = "https://docs.rs/futures-sink/0.3"
description = """
The asynchronous `Sink` trait for the futures-rs library.
"""

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[dependencies]

[package.metadata.docs.rs]
all-features = true
