[package]
name = "futures-task"
edition = "2018"
version = "0.3.15"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/futures-rs"
homepage = "https://rust-lang.github.io/futures-rs"
documentation = "https://docs.rs/futures-task/0.3"
description = """
Tools for working with tasks.
"""

[features]
default = ["std"]
std = ["alloc"]
alloc = []

# These features are no longer used.
# TODO: remove in the next major version.
unstable = []
cfg-target-has-atomic = []

[dependencies]

[dev-dependencies]
futures = { path = "../futures" }

[package.metadata.docs.rs]
all-features = true
